fix gap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,7 +75,7 @@ body {
 
 .section__board {
   display: flex;
-  gap: 20px;
+  gap: 19px;
   height: 80%;
   width: 100%;
   border-radius: 15px;
